<resources>
    <string name="app_name">RecipeSearcher</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="back_button">Back</string>
    <string name="za_gourmet_logo_name">This is the official logo for ZA Gourmet.</string>

    <string name="sign_in">SIGN IN</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up">Not a user? Sign up.</string>
    <string name="twitter_icon">THis is the Twitter social media platform icon.</string>
    <string name="instagram_icon">THis is the Instagram social media platform icon.</string>
    <string name="facebook_icon">THis is the Facebook social media platform icon.</string>

    <string name="recipe_instruction_placeholder_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industries standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="privacy_policy">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Malesuada fames ac turpis egestas. Amet luctus venenatis lectus magna fringilla. Condimentum id venenatis a condimentum vitae sapien pellentesque habitant. Turpis massa tincidunt dui ut ornare lectus sit. Auctor urna nunc id cursus metus aliquam eleifend mi in. Gravida cum sociis natoque penatibus et magnis dis parturient montes. Ultrices eros in cursus turpis massa tincidunt dui ut ornare. Sit amet consectetur adipiscing elit. Cursus vitae congue mauris rhoncus aenean vel elit scelerisque. Augue lacus viverra vitae congue. Ipsum dolor sit amet consectetur adipiscing elit. Faucibus interdum posuere lorem ipsum dolor sit amet. Vitae sapien pellentesque habitant morbi tristique. Tortor condimentum lacinia quis vel.

Orci nulla pellentesque dignissim enim sit. Sem integer vitae justo eget magna fermentum iaculis eu. Lorem donec massa sapien faucibus. Et ultrices neque ornare aenean euismod elementum nisi. Lacus viverra vitae congue eu consequat ac felis donec et. Mauris pharetra et ultrices neque ornare aenean euismod elementum. Et ultrices neque ornare aenean euismod. Sed turpis tincidunt id aliquet risus feugiat in. Nullam ac tortor vitae purus. Gravida neque convallis a cras. Dictum non consectetur a erat nam. Fringilla urna porttitor rhoncus dolor purus non. Rhoncus urna neque viverra justo. Pulvinar elementum integer enim neque volutpat. Vel fringilla est ullamcorper eget nulla facilisi etiam. Amet consectetur adipiscing elit duis tristique sollicitudin nibh. Ut tristique et egestas quis. Arcu cursus vitae congue mauris. Tellus integer feugiat scelerisque varius morbi enim nunc faucibus.

Est ultricies integer quis auctor. Sed egestas egestas fringilla phasellus faucibus scelerisque. Arcu felis bibendum ut tristique. Velit dignissim sodales ut eu. Imperdiet sed euismod nisi porta lorem mollis aliquam ut porttitor. Tellus cras adipiscing enim eu turpis egestas pretium aenean pharetra. Id porta nibh venenatis cras. Gravida cum sociis natoque penatibus et magnis dis parturient montes. Neque laoreet suspendisse interdum consectetur libero id faucibus. Nam at lectus urna duis. Consequat id porta nibh venenatis cras sed felis eget. Praesent semper feugiat nibh sed pulvinar proin gravida hendrerit. Id volutpat lacus laoreet non. Neque laoreet suspendisse interdum consectetur libero id faucibus nisl. Pellentesque habitant morbi tristique senectus et netus et. Tortor at auctor urna nunc id cursus metus. Lobortis feugiat vivamus at augue eget arcu. Ut venenatis tellus in metus vulputate eu. Non enim praesent elementum facilisis leo vel fringilla est. Sagittis vitae et leo duis ut.

Lacinia quis vel eros donec. Enim tortor at auctor urna. Quisque egestas diam in arcu. Diam vel quam elementum pulvinar etiam non quam lacus. Commodo ullamcorper a lacus vestibulum. Nec ultrices dui sapien eget mi proin sed libero enim. Volutpat diam ut venenatis tellus in metus. Nibh cras pulvinar mattis nunc sed blandit libero volutpat. Venenatis a condimentum vitae sapien pellentesque habitant morbi. Dignissim convallis aenean et tortor at risus viverra. Ac feugiat sed lectus vestibulum mattis ullamcorper. Elementum curabitur vitae nunc sed velit dignissim sodales. Orci dapibus ultrices in iaculis nunc. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing. Id ornare arcu odio ut sem nulla pharetra diam. Elementum eu facilisis sed odio. Ultrices dui sapien eget mi proin sed libero enim. Integer quis auctor elit sed vulputate mi.

Quis vel eros donec ac odio tempor orci. Aenean pharetra magna ac placerat vestibulum lectus mauris. Massa sed elementum tempus egestas sed sed risus pretium. Vestibulum morbi blandit cursus risus at. Sed vulputate odio ut enim blandit. At elementum eu facilisis sed odio morbi quis commodo. Viverra ipsum nunc aliquet bibendum enim. Mi eget mauris pharetra et ultrices neque. Tempor id eu nisl nunc mi ipsum faucibus vitae. Aliquam sem et tortor consequat id porta nibh venenatis. Ullamcorper sit amet risus nullam eget. Tristique risus nec feugiat in fermentum posuere. Tempus imperdiet nulla malesuada pellentesque elit. Sit amet purus gravida quis blandit turpis cursus in.

Libero justo laoreet sit amet cursus sit amet dictum. Magna fermentum iaculis eu non diam phasellus vestibulum lorem sed. Elit ut aliquam purus sit amet luctus. Tortor dignissim convallis aenean et tortor at risus. Posuere morbi leo urna molestie at elementum eu facilisis sed. Faucibus nisl tincidunt eget nullam non nisi est sit. Est pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Eget egestas purus viverra accumsan in nisl nisi scelerisque eu. Facilisis volutpat est velit egestas dui id. Ipsum suspendisse ultrices gravida dictum fusce. Tristique risus nec feugiat in fermentum posuere. Volutpat commodo sed egestas egestas. Semper quis lectus nulla at volutpat diam ut venenatis tellus. Adipiscing bibendum est ultricies integer quis. Adipiscing elit ut aliquam purus. Et sollicitudin ac orci phasellus. Massa id neque aliquam vestibulum. Feugiat nibh sed pulvinar proin gravida hendrerit. Cras adipiscing enim eu turpis egestas. Enim nec dui nunc mattis enim ut tellus elementum.

Iaculis urna id volutpat lacus laoreet. Lectus quam id leo in vitae turpis massa. Sociis natoque penatibus et magnis dis. Nec ultrices dui sapien eget mi. In vitae turpis massa sed. Volutpat blandit aliquam etiam erat. Malesuada fames ac turpis egestas integer eget aliquet. Sapien faucibus et molestie ac. Lacus sed turpis tincidunt id. Aenean vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Volutpat sed cras ornare arcu dui vivamus. Semper auctor neque vitae tempus quam pellentesque nec nam. Donec adipiscing tristique risus nec feugiat in. Fusce ut placerat orci nulla pellentesque dignissim enim.

Id porta nibh venenatis cras. Neque viverra justo nec ultrices dui sapien. Lobortis elementum nibh tellus molestie nunc non blandit massa enim. Turpis in eu mi bibendum neque egestas. Magna ac placerat vestibulum lectus mauris ultrices eros in. Amet nulla facilisi morbi tempus iaculis urna id. Magna ac placerat vestibulum lectus. Pellentesque pulvinar pellentesque habitant morbi tristique. Eget velit aliquet sagittis id consectetur. Vitae tempus quam pellentesque nec nam aliquam sem. Magna sit amet purus gravida quis blandit turpis. Amet consectetur adipiscing elit duis tristique sollicitudin nibh. Dignissim sodales ut eu sem integer vitae justo. Tempor nec feugiat nisl pretium fusce id velit. Eu tincidunt tortor aliquam nulla facilisi cras fermentum odio. Sodales ut eu sem integer vitae justo eget magna fermentum. Quam pellentesque nec nam aliquam sem et. Euismod lacinia at quis risus sed vulputate.

Quis ipsum suspendisse ultrices gravida dictum fusce ut placerat orci. Interdum velit laoreet id donec ultrices. Non tellus orci ac auctor augue mauris. Sed euismod nisi porta lorem mollis. Nunc congue nisi vitae suscipit tellus mauris a. Ullamcorper sit amet risus nullam eget felis eget nunc lobortis. Porta non pulvinar neque laoreet suspendisse interdum consectetur. Imperdiet dui accumsan sit amet. Consequat mauris nunc congue nisi. Pulvinar neque laoreet suspendisse interdum consectetur libero. Mauris pharetra et ultrices neque ornare aenean euismod elementum nisi. Cras ornare arcu dui vivamus arcu felis bibendum ut tristique. Suspendisse in est ante in nibh mauris cursus. Tellus integer feugiat scelerisque varius. Commodo elit at imperdiet dui accumsan sit amet nulla. Adipiscing elit pellentesque habitant morbi tristique senectus. Quam nulla porttitor massa id neque aliquam vestibulum morbi. Ornare suspendisse sed nisi lacus sed.

Nunc scelerisque viverra mauris in. Pellentesque habitant morbi tristique senectus et netus et malesuada. Dui ut ornare lectus sit. Vestibulum mattis ullamcorper velit sed ullamcorper morbi. Tempus egestas sed sed risus pretium quam. Eget velit aliquet sagittis id consectetur purus. Libero justo laoreet sit amet cursus. Nisi porta lorem mollis aliquam ut. Aenean sed adipiscing diam donec. Habitant morbi tristique senectus et netus et malesuada. Id eu nisl nunc mi ipsum. Vitae congue mauris rhoncus aenean vel elit scelerisque mauris. Velit laoreet id donec ultrices tincidunt arcu non. Sodales ut etiam sit amet nisl purus.</string>
    <string name="title_activity_avtivity_navbar">avtivity_navbar</string>
    <string name="title_activity_recipe_screen" />
    <string name="title_activity_home" />
    <string name="title_activity_login_signin" />
    <string name="title_activity_get_started_welcome2" />
    <string name="title_activity_get_started_welcome1" />
    <string name="title_activity_registration" />
    <string name="title_activity_login" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="favourites">Favourites</string>
    <string name="save">Save</string>
</resources>